--- a/src/app/citsmart/citsmart.component.html
+++ b/src/app/citsmart/citsmart.component.html
@@ -1,41 +1,46 @@
 
-    <div class="jumbotron">
-        <hr />
-        <div class="row">
-            <div>
-                <input [(ngModel)]="searchtext" id="input_busca" class="form-control" type="text" placeholder="Digite a informação" (change)="getFiltro()"/>
-            </div>
-            <div style="padding-top: 10px;">
-                <button type="button" class="btn btn-primary ml-4" (click)="login()">Limpar Filtro</button>
-            </div>
+<div class="jumbotron">
+    <hr />
+    <div class="row">
+        <div>
+            <input [(ngModel)]="searchtext" id="input_busca" class="form-control" type="text" placeholder="Consulte pelo Usuário" (change)="getFiltro()"/>
         </div>
-        <hr />
-
-        <div class="jumbotron"></div>
-        <table class="table table-striped table-hover table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col">Usuário</th>
-                    <th scope="col">Situação</th>
-                    <th scope="col">ID Prioridade</th>
-                    <th scope="col">Data Limite</th>
-                    <th scope="col">Data e Hora de Fim</th>
-                    <th scope="col">Tempo de Atraso</th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody id="tabela_ticket">
-                <tr *ngFor="let data of filteredData">
-                    <td>{{ data.Usuario | uppercase }}</td>
-                    <td>{{ data.situacao }}</td>
-                    <td>{{ data.idprioridade }}</td>
-                    <td>{{ data.data_limit }}</td>
-                    <td>{{ data.datahorafim | date:'dd/MM/yyyy HH:mm'}}</td>
-                    <td>{{ data.tempoatrasohh }}</td>
-                    <td>
-                        <button type="button" (click)="goToDetalhesByState(data)" class="btn btn-secondary">Visualizar</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div style="padding-top: 10px;">
+            <button type="button" class="btn btn-primary ml-4" (click)="login()">
+                <img src="/assets/icons/eraser.svg">
+                Limpar Filtro
+            </button>
+        </div>
     </div>
+    <hr />
+
+    <div class="jumbotron"></div>
+    <table class="table table-striped table-hover table-bordered">
+        <thead>
+            <tr>
+                <th scope="col" width="30%">Usuário</th>
+                <th scope="col" width="10%">Situação</th>
+                <th scope="col" width="15%">ID Prioridade</th>
+                <th scope="col" width="10%">Data Limite</th>
+                <th scope="col" width="15%">Data e Hora Fim</th>
+                <th scope="col" width="15%">Tempo de Atraso</th>
+                <th scope="col" width="5%"></th>
+            </tr>
+        </thead>
+        <tbody id="tabela_ticket">
+            <tr *ngFor="let data of filteredData">
+                <td >{{ data.Usuario | uppercase }}</td>
+                <td>{{ data.situacao }}</td>
+                <td>{{ data.idprioridade }}</td>
+                <td>{{ data.data_limit }}</td>
+                <td>{{ data.datahorafim | date:'dd/MM/yyyy HH:mm'}}</td>
+                <td>{{ data.tempoatrasohh }}</td>
+                <td>
+                    <button type="button" (click)="goToDetalhesByState(data)" class="btn btn-light">
+                        <img src="/assets/icons/search.svg">
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
